@@ -1,2 +1,1 @@
-DIST ants-2.3.1.tar.gz 2437950 SHA256 c0680feab0ebb85c8cd6685043126666929b35e1cf387a5cc1d3a2d7169bddd3 SHA512 c22af10b7aed1dc5c6b06d6b7d3b2c33ced382926ab5972dd55e4766ff0269330bf01e6975712d991e96c5d9d23f78c8081a3ff475ea92d539c695105b5cfe9a WHIRLPOOL 54c0f411bbd305530c9a8fcdfc66e42f76991c209330375e11d65522ad7a2d58066fc349aae68d003aaab413b59bdabf2f9f5cdfd5626269caa9968909785964
-DIST rest?method=midas.bitstream.download&checksum=84cf0e06646142e0aa4c3d3324a62701 46161 SHA256 6c40c155a97d383438bc8a66eeb96df51517502bab0b1e8670711c141e71f689 SHA512 20942c444831f9dd71d41809acf0eac6fb351bda9a6e2d6826a645121b09d781a7feacdcd5edf4b7e9708f9e5de380bdfdfcb9f7c4b25fa1a03d506d817c3e1d WHIRLPOOL 5c772213fe6ad3c7a032a61024188a1eaeed93137967e2996cd3ceaf39538e9a522b5e8cdf8826816ba2727191bed510b7616056ab32e95d13bcdef0ef12ced9
+DIST 84cf0e06646142e0aa4c3d3324a62701 46161 SHA256 6c40c155a97d383438bc8a66eeb96df51517502bab0b1e8670711c141e71f689 SHA512 20942c444831f9dd71d41809acf0eac6fb351bda9a6e2d6826a645121b09d781a7feacdcd5edf4b7e9708f9e5de380bdfdfcb9f7c4b25fa1a03d506d817c3e1d WHIRLPOOL 5c772213fe6ad3c7a032a61024188a1eaeed93137967e2996cd3ceaf39538e9a522b5e8cdf8826816ba2727191bed510b7616056ab32e95d13bcdef0ef12ced9
