@@ -1,4 +1,4 @@
-# Copyright 1999-2019 Gentoo Foundation
+# Copyright 1999-2019 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
 EAPI=7
@@ -9,9 +9,9 @@ MY_HASH="84cf0e06646142e0aa4c3d3324a62701"
 
 DESCRIPTION="Advanced Normalitazion Tools for neuroimaging"
 HOMEPAGE="http://stnava.github.io/ANTs/"
-SRC_URI="http://slicer.kitware.com/midas3/api/rest?method=midas.bitstream.download&checksum=${MY_HASH} > ${MY_HASH}"
+SRC_URI="http://slicer.kitware.com/midas3/api/rest?method=midas.bitstream.download&checksum=${MY_HASH} -> ${MY_HASH}"
 EGIT_REPO_URI="https://github.com/stnava/ANTs.git"
-EGIT_COMMIT="1d2e5bf497cd71667d6f7d79ff858387c08bb93e"
+#EGIT_COMMIT="1d2e5bf497cd71667d6f7d79ff858387c08bb93e"
 
 SLOT="0"
 LICENSE="BSD"
