@@ -1,3 +1,9 @@
+*ants-2.3.1_p20190704 (21 Sep 2019)
+
+  21 Sep 2019;  <chymera@gentoo.org> +ants-2.3.1_p20190704.ebuild,
+  -ants-2.3.1-r1.ebuild, -ants-2.3.1.ebuild, ants-9999.ebuild:
+  sci-biology/ants: version bump 2.3.1_p20190704
+
 *ants-2.3.1 (18 May 2019)
 
   18 May 2019;  <chymera@gentoo.org> +ants-2.3.1.ebuild:
